Cleaning the code